:sparkles: Added new find ancestors api and initial pagination
